# Vision-Cluster

./: .gitignore  README.md  pyproject.toml
src/: cluster_images.py  convert_heic_to_jpeg.py  convert_images.py  dinov3_embeddings.py  extract_metadata.py  mcpv45_label_images.py  util.py
